--- a/index.html
+++ b/index.html
@@ -42,13 +42,11 @@
     <p class="subtitle">
       An optimal algorithm for spaced repetition
     </p>
-    <!--
     <ul class="subtitle">
-      <li>Presented at <a href="http://www.wsdm-conference.org/2017/">WSDM, 2017</a>;</li>
-      <li>Full paper at <a href="https://arxiv.org/abs/1610.05773">arxiv.org/abs/1610.05773</a>;</li>
-      <li>Source code at <a href="https://github.com/Networks-Learning/RedQueen"><i class="fa fa-github"></i>Networks-Learning/RedQueen</a></li>
+      <!-- <li>Presented at <a href="http://www.wsdm-conference.org/2017/">, 2017</a>;</li> -->
+      <li>Full paper <a href="docs/spaced-repetition.pdf">here</a>.</li>
+      <!-- <li>Source code at <a href="https://github.com/Networks-Learning/Memorize"><i class="fa fa-github"></i>Networks-Learning/Memorize</a></li> -->
     </ul>
-    -->
 
     <section>
       <h2>Introduction</h2>
@@ -314,7 +312,7 @@
       <h2>More details</h2>
 
       <p>
-        Our paper contains a mathematical description of <span class="memorize">Memorize</span>,
+        <a href="docs/spaced-repetition.pdf">Our paper</a> contains a mathematical description of <span class="memorize">Memorize</span>,
         and several extensions:
       </p>
 
