--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <h3>Memory models</h3>
       <p>
         Before we can start talking about scheduling, we need a model of human
-        memory, which can help us predict how humans forget. There are are
+        memory, which can help us predict how humans forget. There are
         multiple models of memory which can predict the probability of recall
         at time \( t \) given the past reviews of the item and its
         <em>difficulty</em>.
