Make GDPR compliant.

--- a/index.html
+++ b/index.html
@@ -355,6 +355,8 @@
       </p>
     </section>
 
+    <a href="https://imprint.mpi-klsb.mpg.de/sws/learning.mpi-sws.org/memorize/">Imprint</a> / <a href="https://data-protection.mpi-klsb.mpg.de/sws/learning.mpi-sws.org/memorize">Data Protection</a>
+
     <!--
     <section>
       <h3>Source code</h3>
